fixing spacing of sub-checkboxes

--- a/containers/tefca-viewer/src/styles/custom-styles.scss
+++ b/containers/tefca-viewer/src/styles/custom-styles.scss
@@ -894,10 +894,6 @@ html {
   padding: 8px 0;
 }
 
-.customize-query-grid-row>div {
-  padding: 8px;
-}
-
 .customize-query-striped-row:nth-child(even) {
   background-color: #f9f9f9;
 }
